# fichas

./: .env.example  .gitignore  DEPLOY.md  DNS_MANUAL.md  Dockerfile  README.md  README_LOCAL.md  docker-compose.dev.yml  docker-compose.tunnel.yml  docker-compose.yml
app/: pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 0001_initial.py  0002_templates_versioning.py  0003_ocr_jobs.py
app/scripts/: seed_admin_and_templates.py
app/src/fichas/: audit.py  auth.py  db.py  main.py  models.py  schemas.py  settings.py
app/src/fichas/routes/: api.py  web.py
app/src/fichas/services/: fichas_service.py  ocr.py  processos_service.py  queue.py  storage.py  templates_service.py
app/src/fichas/services/ocr/: __init__.py  google_vision.py  mapping.py  provider.py
app/src/fichas/storage/: __init__.py  base.py  gcs.py  local.py
app/src/fichas/templates/: admin_template_form.html  admin_template_import.html  admin_templates_list.html  base.html  dashboard.html  ficha_detail.html  ficha_form.html  fichas_importar.html  fichas_importar_revisar.html  fichas_importar_status.html  fichas_list.html  login.html  processo_detail.html  processo_form.html  processos_list.html  saiba_mais.html
app/src/fichas/templates/partials/: fichas_table.html  import_processos_table.html  ocr_status.html  processos_table.html
app/src/fichas/workers/: ocr_worker.py
app/tests/: conftest.py  test_auth.py  test_fichas.py  test_ocr_integration.py  test_ocr_mapping.py  test_ocr_provider.py  test_processos.py  test_templates_import.py  test_uploads.py
cloudrun/: cloudbuild.yaml  (+1 more)
(+19 files in other folders)
